welcome.lessons.welcome.methods.slug.SlugHunting.scala.error
SlugHunting:7: error: value or is not a member of Unit
		gauche() or droite()}
                         ^